<resources>
    <string name="app_name">Carolina_Coffee</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="earn_points_for_free_items">Earn Points for Free items</string>
    <string name="points_collected">Points collected!</string>
    <string name="congrats">Congrats!</string>
    <string name="coffe_pic">coffe_pic</string>
    <string name="backgroundpic">BackGroundPic</string>
    <string name="congratsbox">congratsBox</string>
    <string name="pointscollectedbox">pointsCollectedBox</string>
    <string name="coffeepic">CoffeePic</string>
    <string name="you_have_earned_a">You have earned a</string>
    <string name="details">Details</string>
    <string name="promotions">Promotions</string>
    <string name="our_current_offers">Our current offers</string>
    <string name="history">History</string>
    <string name="inbox">inbox</string>
    <string name="Inbox">Inbox</string>
    <string name="your_history_and_receipts">Your History and Receipts</string>
    <string name="we_ll_keep_you_up_to_date">We\'ll keep you up to date!</string>
    <string name="messages_textbox">Messages</string>
    <string name="congrats_you_ve_won_a_free_drink">Congrats you\'ve won a free drink</string>
    <string name="rewards">Rewards</string>
    <string name="earn_points_and_free_items">Earn Points and Free items</string>
    <string name="_100_points_collected">100 points collected!</string>
    <string name="todo">TODO</string>
    <string name="click_for_surprise">Click For Surprise</string>
    <string name="hot">Hot</string>
    <string name="medium">Medium</string>
    <string name="customize_your_drink">Customize your drink</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="help">Help</string>
    <string name="points_collected_txt">points_collected</string>
    <string name="points_collected_text">points collected</string>
    <string name="review_your_order">Review your Order</string>
    <string name="order_text">Order</string>
    <string name="lbl_message">"Message: "</string>
    <string name="subject">"Subject: "</string>
    <string name="order_now_txt">Order now!</string>
    <string name="try_our_new_americano_coffee_today">Try our new Americano Coffee today!</string>
    <string name="account_settings">Account Settings</string>
    <string name="finnish_settings_up_your_account">Finnish settings up your account!</string>
    <string name="points_collected_txt2">points collected!</string>
    <string name="inbox3">Inbox</string>
    <string name="history2">History</string>
    <string name="menu">Menu</string>
    <string name="choose_your_drink">Choose your drink</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="rewards2">Rewards</string>
    <string name="settings">Settings</string>
    <string name="change_your_app_settings">Change your app settings.</string>
    <string name="security">Security</string>
    <string name="app_settings">App Settings</string>
    <string name="notifications">Notifications</string>
    <string name="biometrics_unlock">Biometrics Unlock</string>
    <string name="application_terms">Application Terms</string>
    <string name="back">Back</string>
    <string name="inbox_messages">Inbox Messages</string>
    <string name="todo2">TODO</string>
</resources>