<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rewardspage1"
    tools:context=".RewardsPageActivity">

    <TextView
        android:id="@+id/topRewardsBox"
        android:layout_width="450dp"
        android:layout_height="120dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointsCollectedBox"
        android:layout_width="284dp"
        android:layout_height="142dp"
        android:background="#F4F4F4"
        app:layout_constraintBottom_toTopOf="@+id/CoffeePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRewardsBox" />

    <TextView
        android:id="@+id/RewardsText"
        android:layout_width="223dp"
        android:layout_height="70dp"
        android:letterSpacing=".1"
        android:text="@string/rewards"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/congratsBox"
        android:layout_width="295dp"
        android:layout_height="152dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoffeePic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/earnPointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing=".1"
        android:text="@string/earn_points_for_free_items"
        android:textColor="#292929"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RewardsText"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/pointsCollectedBox"
        app:layout_constraintEnd_toEndOf="@+id/pointsCollectedBox"
        app:layout_constraintStart_toStartOf="@+id/pointsCollectedBox"
        app:layout_constraintTop_toTopOf="@+id/pointsCollectedBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:letterSpacing=".05"
        android:text="@string/congrats"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/congratsBox"
        app:layout_constraintTop_toTopOf="@+id/congratsBox"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/RewardPointsCollected"
        android:layout_width="206dp"
        android:layout_height="29dp"
        android:text="@string/points_collected"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pointsCollectedBox"
        app:layout_constraintEnd_toEndOf="@+id/pointsCollectedBox"
        app:layout_constraintStart_toStartOf="@+id/pointsCollectedBox"
        app:layout_constraintTop_toTopOf="@+id/pointsCollectedBox"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/CoffeePic"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:contentDescription="@string/coffeepic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRewardsBox"
        app:layout_constraintVertical_bias="0.43"
        app:srcCompat="@drawable/coffee1" />

    <TextView
        android:id="@+id/earnedText"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:text="@string/you_have_earned_a"
        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/congratsBox"
        app:layout_constraintTop_toTopOf="@+id/congratsBox"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/DetailsButton"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:background="#FDFDFD"
        android:text="@string/details"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
        app:layout_constraintStart_toStartOf="@+id/congratsBox"
        app:layout_constraintTop_toTopOf="@+id/congratsBox"
        app:layout_constraintVertical_bias="0.92" />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nav_background_curved"
        app:itemTextColor="@color/black"
        app:menu="@menu/navigation_items"
        app:itemRippleColor="#C1C1C1"
        app:itemIconTint="@color/icons_color"
        app:layout_constraintBottom_toBottomOf="parent" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>