<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_shot_2021_11_16_at_9_42_49_pm"
    tools:context=".PromotionsActivity2">

    <TextView
        android:id="@+id/promotionsBox"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#BEFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topRewardsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotions"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/currentOffersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_current_offers"
        android:textColor="#455A64"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/promotionsBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/promotionsBox"
        app:layout_constraintVertical_bias="0.79" />

    <TextView
        android:id="@+id/redBox"
        android:layout_width="294dp"
        android:layout_height="191dp"
        android:background="#AE912828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promotionsBox"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="294dp"
        android:layout_height="69dp"
        android:background="#C6FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redBox"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:background="#FDFDFD"
        android:text="@string/details"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/redBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/offersTextBox"
        android:layout_width="242dp"
        android:layout_height="132dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:text="You do not have any new offers at this time. Check back with us soon for more updates!"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/redBox"
        app:layout_constraintEnd_toEndOf="@+id/redBox"
        app:layout_constraintStart_toStartOf="@+id/redBox"
        app:layout_constraintTop_toTopOf="@+id/redBox" />

</androidx.constraintlayout.widget.ConstraintLayout>